<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_select_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_contact"/>

    <EditText
        android:id="@+id/phone_number_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/hint_phone_number" />

    <EditText
        android:id="@+id/block_name_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/hint_block_name" />

    <Button
        android:id="@+id/btn_save_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_save"/>


</LinearLayout>